src/html/snapshots/textsurf__html__parser__tests__parse_fragment_table.snap
---
source: src/html/parser.rs
expression: "fragment_dump(\"<td>aaa</td>bbb\", \"table\", ElementNs::Html)"
---
| <tbody>
|   <tr>
|     <td>
|       "aaa"
| "bbb"
