src/html/snapshots/textsurf__html__parser__tests__parse_misnesting.snap
---
source: src/html/parser.rs
expression: "document_dump(\"<b><i>x</b>y</i>\")"
---
#document
| <html>
|   <head>
|   <body>
|     <b>
|       <i>
|         "x"
|     <i>
|       "y"
