src/html/snapshots/textsurf__html__parser__tests__parse_select_table.snap
---
source: src/html/parser.rs
expression: "document_dump(\"<table><td><select><option>a</select></td></table>\")"
---
#document
| <html>
|   <head>
|   <body>
|     <table>
|       <tbody>
|         <tr>
|           <td>
|             <select>
|               <option>
|                 "a"
