src/html/snapshots/textsurf__html__parser__tests__parse_svg.snap
---
source: src/html/parser.rs
expression: "document_dump(\"<svg viewBox=\\\"0 0 1 1\\\"><linearGradient/><foreignObject><p>x</p></foreignObject></svg>\")"
---
#document
| <html>
|   <head>
|   <body>
|     <svg svg>
|       viewBox="0 0 1 1"
|       <svg linearGradient>
|       <svg foreignObject>
|         <p>
|           "x"
