src/html/snapshots/textsurf__html__parser__tests__parse_template.snap
---
source: src/html/parser.rs
expression: "document_dump(\"<template><div>Hello</div></template>\")"
---
#document
| <html>
|   <head>
|     <template>
|       content
|         <div>
|           "Hello"
|   <body>
