src/html/snapshots/textsurf__html__parser__tests__parse_textarea_pre.snap
---
source: src/html/parser.rs
expression: "document_dump(\"<textarea>\\n  indented\\n</textarea><pre>\\n  \\tpre\\n</pre>\")"
---
#document
| <html>
|   <head>
|   <body>
|     <textarea>
|       "  indented
"
|     <pre>
|       "  	pre
"
